core: add assignment description

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,21 @@
 cmake_minimum_required(VERSION 3.14)
 
-# Set the project name and version
-project(HelloWorld VERSION 1.0)
+project(Sorting VERSION 1.0)
 
-# Specify the C++ standard
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add executables
-add_executable(hello_world src/helloWorld/main.cpp)
-add_executable(greet_world src/greet/main.cpp)
+# Collect all source files in src/ recursively
+file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
-# Small library providing the greeting function so unit tests can link to it.
-add_library(greet src/greet/greet.h src/greet/greet.cpp)
-target_include_directories(greet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/greet)
-target_compile_features(greet PUBLIC cxx_std_17)
-target_link_libraries(greet_world PRIVATE greet)
+add_library(sorting_lib STATIC ${SRC_FILES})
+target_include_directories(sorting_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-# --- GoogleTest (for integration tests that run the built binary) ---
+add_executable(sorting ${SRC_FILES})
+target_include_directories(sorting PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_link_libraries(sorting PRIVATE sorting_lib)
+
+# --- GoogleTest ---
 include(FetchContent)
 FetchContent_Declare(
 	googletest
@@ -28,23 +26,8 @@ FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
-# Test that runs the built binary. The test source will launch the binary by path.
-add_executable(test_binary tests/test_binary.cpp)
-target_link_libraries(test_binary PRIVATE GTest::gtest)
+add_executable(test_sort tests/test_sort.cpp)
+target_link_libraries(test_sort PRIVATE sorting_lib GTest::gtest_main)
 
-# Unit test that contains a copy of the program's main logic (keeps the installed
-# `hello_world` executable unchanged). The test captures stdout from the copied
-# main logic and asserts the expected output.
-add_executable(test_unit tests/test_unit.cpp)
-target_link_libraries(test_unit PRIVATE greet GTest::gtest_main)
-add_test(NAME unit_main_test COMMAND test_unit)
-
-# Provide the path to the built executable to the test via a compile definition.
-if (CMAKE_GENERATOR MATCHES "Visual Studio")
-	# Visual Studio places executables in configuration subfolders (Debug/Release)
-	set(EXE_SUBDIR $<CONFIG>)
-else()
-	set(EXE_SUBDIR "")
-endif()
-
-add_test(NAME run_hello_binary COMMAND test_binary $<TARGET_FILE:hello_world>)
+include(GoogleTest)
+gtest_discover_tests(test_sort)
